# final-project-JacobAlbus

./: CMakeLists.txt  PROPOSAL.md  jjba_strategy_main.cc
assets/boards/: board1.json  board2.json  board_w_empty_allies.json  board_w_empty_enemies.json  board_wo_allies.json  board_wo_enemies.json  empty_board.json  no_board.json  non_square_board.json
include/engine/: attack.h  board.h  character.h  game_engine.h  tile.h
include/gui/: jjba_strategy_app.h  render_engine.h
src/engine/: board.cc  character.cc  game_engine.cc  tile.cc
src/gui/: jjba_strategy_app.cc  render_engine.cc
tests/: board_tests.cc  character_tests.cc  game_engine_tests.cc  tile_tests.cc
